Fix issue with multithreaded schema update requests